--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,12 +4,9 @@ websockets
 httpx
 python-dotenv
 asyncio
-livekit-server-sdk
+livekit
 livekit-agents
 groq
-cartesia
-deepgram
-silero
 pydantic
 uuid
 requests
